fix: dark mode shader css

--- a/source/css/_mode/darkmode.styl
+++ b/source/css/_mode/darkmode.styl
@@ -37,12 +37,12 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
     --hlexpand-bg: linear-gradient(180deg, rgba(lighten(#121212, 2), .6), rgba(lighten(#121212, 2), .9))
 
     #web_bg:before,
-    #footer:before,
-    #page-header:before
+    // #footer:before,
+    // #page-header:before
       position: absolute
       width: 100%
       height: 100%
-      background-color: alpha($dark-black, .3)
+      background-color: alpha($dark-black, .7)
       content: ''
 
     #article-container
